--- a/Practica1/settings.gradle
+++ b/Practica1/settings.gradle
@@ -1,7 +1,7 @@
+include ':AndroidGame'
 include ':AndroidEngine'
 include ':DesktopGame'
 include ':DesktopEngine'
 include ':OffTheLineLogic'
 include ':Engine'
-include ':app'
 rootProject.name = "Practica1"
